--- a/pixshala.css
+++ b/pixshala.css
@@ -221,7 +221,8 @@ height:466px;
   font-size: 15px;
 }
 .para1{
-    font-size: 8px;
+    font-size: 8px ; 
+    line-height: 10px;
 }
 .col{
     width:100%;
