--- a/style_responsive.css
+++ b/style_responsive.css
@@ -44,7 +44,7 @@
 }
  .event-button{
   max-width: 14%;
-    position: absolute;
+    position: relative;
     top: 160px;
     z-index: 2;
     left: 225px;
