--- a/pixshala.css
+++ b/pixshala.css
@@ -175,7 +175,7 @@ background-size: 100% 100%;
 } */
 .eve-right3{
 width: 50%;
-background: url(img/bird_2.png);
+background: url(img/orange.jpg);
 background-size: 100% 100%;
 float: left;
 }
@@ -197,7 +197,7 @@ width: 50%;
 } */
 .eve-left4{
 width: 50%;
-  background: url(img/pixshala.png);
+  background: url(dog.jpg);
   background-size: 100% 100%;
   float: right;
 }
