--- a/pixshala.css
+++ b/pixshala.css
@@ -197,7 +197,7 @@ width: 50%;
 } */
 .eve-left4{
 width: 50%;
-  background: url(dog.jpg);
+  background: url(img/dog.jpg);
   background-size: 100% 100%;
   float: right;
 }
